# MarketForecasting

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
market_forecasting/: __init__.py  dataset.py  features.py  plots.py
market_forecasting/modeling/: predict.py  train.py
notebooks/: 01_data_processing.ipynb  03_feature_extraction.ipynb  04_training.ipynb
part_i/: 00_data_download.ipynb  01_data_processing.ipynb  03_feature_extraction.ipynb  04_training.ipynb  README.md
part_ii/: README.md  extractors.py  features.ipynb
