[tool.poetry]
name = "market-forecasting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.0.*"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
yfinance = "^0.2.43"
tqdm = "^4.66.5"
scikit-learn = "^1.5.1"
tsfel = "^0.1.8"
seaborn = "^0.13.2"
pywavelets = "^1.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
